--- a/index.html
+++ b/index.html
@@ -20,9 +20,119 @@
       </ul>
     </nav>
     <div>
-      <button>Accedi</button>
+      <button class="login">Accedi</button>
     </div>
   </header>
+  <main>
+    <section class="jambotron">
+      <h1>Titolo</h1>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam consequuntur delectus laboriosam. Quasi dolores ipsam sed. Iure, minima inventore ab ipsa quidem eum vitae illum nulla, consequuntur error cumque omnis?
+      </p>
+      <div class="user-reference">
+        <button class="download link">Download</button>
+        <button class="Open link">Open</button>
+      </div>
+    </section>
+    <section class="features-top">
+      <div class="why-choose">
+        <img src="" alt="rane why">
+        <div class="description">
+          <h2>Titolo</h2>
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Obcaecati corrupti rem optio cum laboriosam. Magnam quibusdam aut aliquam odit facere.</p>
+        </div>
+      </div>
+      <div class="why-choose special">
+        <div class="description">
+          <h2>Titolo</h2>
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Obcaecati corrupti rem optio cum laboriosam. Magnam quibusdam aut aliquam odit facere.</p>
+          <img src="" alt="rane why">
+        </div>
+      </div>
+      <div class="why-choose">
+        <img src="" alt="rane why">
+        <div class="description">
+          <h2>Titolo</h2>
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Obcaecati corrupti rem optio cum laboriosam. Magnam quibusdam aut aliquam odit facere.</p>
+        </div>
+      </div>
+    </section>
+
+    <section class="features-bottom">
+      <div class="div why-choose">
+       <div class="description">
+         <h2>Titolo</h2>
+         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Obcaecati corrupti rem optio cum laboriosam. Magnam quibusdam aut aliquam odit facere.</p>
+       </div>
+       <img src="" alt="">
+     </div>
+
+     <div class="last-call">
+      <h3>Pronto?</h3>
+      <div class="user-reference">
+        <button class="download link">Download</button>
+        <button class="Open link">Open</button>
+      </div>
+     </div>
+
+    </section>
+  </main>
+
+  <footer>
+    <div class="top">
+      <div class="contacts">
+        <h3>Titolo</h3>
+        <div>Logo</div>
+        <span>Testo</span>
+        <div>Link loghi social</div>
+      </div>
+      <div class="menu">
+        <h4>Titolo</h4>
+        <ul>
+          <li><a href="#"></a>Link</li>
+          <li><a href="#"></a>Link</li>
+          <li><a href="#"></a>Link</li>
+          <li><a href="#"></a>Link</li>
+          <li><a href="#"></a>Link</li>
+        </ul>
+      </div>
+
+      <div class="menu">
+        <h4>Titolo</h4>
+        <ul>
+          <li><a href="#"></a>Link</li>
+          <li><a href="#"></a>Link</li>
+          <li><a href="#"></a>Link</li>
+          <li><a href="#"></a>Link</li>
+          <li><a href="#"></a>Link</li>
+          <li><a href="#"></a>Link</li>
+          <li><a href="#"></a>Link</li>
+          <li><a href="#"></a>Link</li>
+          <li><a href="#"></a>Link</li>
+          <li><a href="#"></a>Link</li>
+          <li><a href="#"></a>Link</li>
+          <li><a href="#"></a>Link</li>
+          <li><a href="#"></a>Link</li>
+          <li><a href="#"></a>Link</li>
+          <li><a href="#"></a>Link</li>
+        </ul>
+      </div>
+
+      <div class="menu">
+        <h4>Titolo</h4>
+        <ul>
+          <li><a href="#"></a>Link</li>
+          <li><a href="#"></a>Link</li>
+          <li><a href="#"></a>Link</li>
+          <li><a href="#"></a>Link</li>
+          <li><a href="#"></a>Link</li>
+        </ul>
+      </div>
+    </div>
+
+    <div class="bottom"></div>
+      <div>Logo</div>
+      <button>Registrati</button>
+  </footer>
   
 </body>
 </html>
