add style to main section

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <button class="login">Accedi</button>
     </div>
   </header>
-  
+
   <main>
     <section class="jambotron">
       <h1>Titolo</h1>
@@ -36,7 +36,9 @@
     </section>
     <section class="features-top">
       <div class="why-choose">
-        <img src="" alt="rane why">
+        <div class="frog-imagine">
+          <img src="" alt="Immagine rane">
+        </div>
         <div class="description">
           <h2>Titolo</h2>
           <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Obcaecati corrupti rem optio cum laboriosam. Magnam quibusdam aut aliquam odit facere.</p>
@@ -46,11 +48,15 @@
         <div class="description">
           <h2>Titolo</h2>
           <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Obcaecati corrupti rem optio cum laboriosam. Magnam quibusdam aut aliquam odit facere.</p>
-          <img src="" alt="rane why">
+          <div class="frog-imagine">
+            <img src="" alt="Immagine rane">
+          </div>
         </div>
       </div>
       <div class="why-choose">
-        <img src="" alt="rane why">
+        <div class="frog-imagine">
+          <img src="" alt="Immagine rane">
+        </div>
         <div class="description">
           <h2>Titolo</h2>
           <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Obcaecati corrupti rem optio cum laboriosam. Magnam quibusdam aut aliquam odit facere.</p>
@@ -59,12 +65,12 @@
     </section>
 
     <section class="features-bottom">
-      <div class="div why-choose">
+      <div class="why-choose">
        <div class="description">
          <h2>Titolo</h2>
          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Obcaecati corrupti rem optio cum laboriosam. Magnam quibusdam aut aliquam odit facere.</p>
        </div>
-       <img src="" alt="">
+       <img src="" alt=""Immagine rane"">
      </div>
 
      <div class="last-call">
