add section name

--- a/index.html
+++ b/index.html
@@ -9,47 +9,57 @@
 </head>
 <body>
   <header>
-    <div class="logo">Logo</div>
-    <nav class="menu">
-      <ul>
-        <li><a href="#">Link</a></li>
-        <li><a href="#">Link</a></li>
-        <li><a href="#">Link</a></li>
-        <li><a href="#">Link</a></li>
-        <li><a href="#">Link</a></li>
-      </ul>
-    </nav>
     <div>
-      <button class="login">Accedi</button>
+      <h1>HEADER</h1>
     </div>
+    <div class="header-bar">
+      <div class="logo debug">Logo</div>
+      <nav class="menu debug">
+        <ul>
+          <li>NAV</li>
+          <li><a href="#">Link</a></li>
+          <li><a href="#">Link</a></li>
+          <li><a href="#">Link</a></li>
+          <li><a href="#">Link</a></li>
+          <li><a href="#">Link</a></li>
+        </ul>
+      </nav>
+      <div>
+        <button class="login">Bottone</button>
+      </div>
+    </div>
+
   </header>
 
   <main>
-    <section class="jambotron">
-      <h1>Titolo</h1>
+    <div class="main debug"><h1>MAIN</h1></div>
+    
+    <section class="jambotron debug">
+      <h1>SEZIONE JAMBOTRON</h1>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam consequuntur delectus laboriosam. Quasi dolores ipsam sed. Iure, minima inventore ab ipsa quidem eum vitae illum nulla, consequuntur error cumque omnis?
       </p>
       <div class="user-reference">
-        <button class="download link">Download</button>
-        <button class="Open link">Open</button>
+        <button class="download link">Bottone: Download</button>
+        <button class="Open link">Bottone: Open</button>
       </div>
     </section>
     <section class="features-top">
-      <div class="why-choose">
+      <div>SEZIONE FEATURES</div>
+      <div class="why-choose debug">
         <div class="frog-imagine">
-          <img src="" alt="Immagine rane">
+          <img src="" alt="Colonna: Immagine rane">
         </div>
         <div class="description">
-          <h2>Titolo</h2>
+          <h2>Colonna: Titolo</h2>
           <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Obcaecati corrupti rem optio cum laboriosam. Magnam quibusdam aut aliquam odit facere.</p>
         </div>
       </div>
-      <div class="why-choose special">
+      <div class="why-choose special debug">
         <div class="description">
-          <h2>Titolo</h2>
+          <h2>Colonna: Titolo</h2>
           <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Obcaecati corrupti rem optio cum laboriosam. Magnam quibusdam aut aliquam odit facere.</p>
           <div class="frog-imagine">
-            <img src="" alt="Immagine rane">
+            <img src="" alt="Colonna: Immagine rane">
           </div>
         </div>
       </div>
