add style to features section

--- a/index.html
+++ b/index.html
@@ -54,21 +54,23 @@
           <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Obcaecati corrupti rem optio cum laboriosam. Magnam quibusdam aut aliquam odit facere.</p>
         </div>
       </div>
+
       <div class="why-choose special debug">
+        <div class="frog-imagine">
+          <img src="" alt="Colonna speciale: Immagine rane">
+        </div>
         <div class="description">
-          <h2>Colonna: Titolo</h2>
+          <h2>Colonna speciale: Titolo</h2>
           <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Obcaecati corrupti rem optio cum laboriosam. Magnam quibusdam aut aliquam odit facere.</p>
-          <div class="frog-imagine">
-            <img src="" alt="Colonna: Immagine rane">
-          </div>
         </div>
       </div>
-      <div class="why-choose">
+  
+      <div class="why-choose debug">
         <div class="frog-imagine">
-          <img src="" alt="Immagine rane">
+          <img src="" alt="Colonna: Immagine rane">
         </div>
         <div class="description">
-          <h2>Titolo</h2>
+          <h2>Colonna: Titolo</h2>
           <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Obcaecati corrupti rem optio cum laboriosam. Magnam quibusdam aut aliquam odit facere.</p>
         </div>
       </div>
@@ -80,8 +82,10 @@
          <h2>Titolo</h2>
          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Obcaecati corrupti rem optio cum laboriosam. Magnam quibusdam aut aliquam odit facere.</p>
        </div>
-       <img src="" alt=""Immagine rane"">
-     </div>
+       <div class="frog-imagine">
+        <img src="" alt="Colonna: Immagine rane">
+       </div>
+      </div>
 
      <div class="last-call">
       <h3>Pronto?</h3>
