add footer style

--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
       </div>
     </section>
     <section class="features-top">
-      <div>SEZIONE FEATURES</div>
+      <div>SEZIONE FEATURES TOP</div>
       <div class="why-choose debug">
-        <div class="frog-imagine">
+        <div class="frog-image">
           <img src="" alt="Colonna: Immagine rane">
         </div>
         <div class="description">
@@ -56,7 +56,7 @@
       </div>
 
       <div class="why-choose special debug">
-        <div class="frog-imagine">
+        <div class="frog-image">
           <img src="" alt="Colonna speciale: Immagine rane">
         </div>
         <div class="description">
@@ -66,7 +66,7 @@
       </div>
   
       <div class="why-choose debug">
-        <div class="frog-imagine">
+        <div class="frog-image">
           <img src="" alt="Colonna: Immagine rane">
         </div>
         <div class="description">
@@ -77,12 +77,13 @@
     </section>
 
     <section class="features-bottom">
+      SEZIONE FEATURES BOTTOM
       <div class="why-choose">
        <div class="description">
          <h2>Titolo</h2>
          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Obcaecati corrupti rem optio cum laboriosam. Magnam quibusdam aut aliquam odit facere.</p>
        </div>
-       <div class="frog-imagine">
+       <div class="frog-image">
         <img src="" alt="Colonna: Immagine rane">
        </div>
       </div>
@@ -91,7 +92,6 @@
       <h3>Pronto?</h3>
       <div class="user-reference">
         <button class="download link">Download</button>
-        <button class="Open link">Open</button>
       </div>
      </div>
 
@@ -99,54 +99,61 @@
   </main>
 
   <footer>
+    <H1>FOOTER</H1>
     <div class="top">
-      <div class="contacts">
-        <h3>Titolo</h3>
-        <div>Logo</div>
-        <span>Testo</span>
-        <div>Link loghi social</div>
-      </div>
-      <div class="menu">
-        <h4>Titolo</h4>
-        <ul>
-          <li><a href="#"></a>Link</li>
-          <li><a href="#"></a>Link</li>
-          <li><a href="#"></a>Link</li>
-          <li><a href="#"></a>Link</li>
-          <li><a href="#"></a>Link</li>
-        </ul>
+      <div>Colonna
+        <div class="contacts">
+          <h3>Titolo</h3>
+          <div>Logo</div>
+          <span>Testo</span>
+          <div>Link loghi social</div>
+        </div>
       </div>
 
-      <div class="menu">
-        <h4>Titolo</h4>
-        <ul>
-          <li><a href="#"></a>Link</li>
-          <li><a href="#"></a>Link</li>
-          <li><a href="#"></a>Link</li>
-          <li><a href="#"></a>Link</li>
-          <li><a href="#"></a>Link</li>
-          <li><a href="#"></a>Link</li>
-          <li><a href="#"></a>Link</li>
-          <li><a href="#"></a>Link</li>
-          <li><a href="#"></a>Link</li>
-          <li><a href="#"></a>Link</li>
-          <li><a href="#"></a>Link</li>
-          <li><a href="#"></a>Link</li>
-          <li><a href="#"></a>Link</li>
-          <li><a href="#"></a>Link</li>
-          <li><a href="#"></a>Link</li>
-        </ul>
-      </div>
+      <div class="menu-section">
+        <div class="menu">
+          <h4>Titolo</h4>
+          <ul>
+            <li><a href="#"></a>Link</li>
+            <li><a href="#"></a>Link</li>
+            <li><a href="#"></a>Link</li>
+            <li><a href="#"></a>Link</li>
+            <li><a href="#"></a>Link</li>
+          </ul>
+        </div>
 
-      <div class="menu">
-        <h4>Titolo</h4>
-        <ul>
-          <li><a href="#"></a>Link</li>
-          <li><a href="#"></a>Link</li>
-          <li><a href="#"></a>Link</li>
-          <li><a href="#"></a>Link</li>
-          <li><a href="#"></a>Link</li>
-        </ul>
+     
+        <div class="menu">
+          <h4>Titolo</h4>
+          <ul>
+            <li><a href="#"></a>Link</li>
+            <li><a href="#"></a>Link</li>
+            <li><a href="#"></a>Link</li>
+            <li><a href="#"></a>Link</li>
+            <li><a href="#"></a>Link</li>
+            <li><a href="#"></a>Link</li>
+            <li><a href="#"></a>Link</li>
+            <li><a href="#"></a>Link</li>
+            <li><a href="#"></a>Link</li>
+            <li><a href="#"></a>Link</li>
+            <li><a href="#"></a>Link</li>
+            <li><a href="#"></a>Link</li>
+            <li><a href="#"></a>Link</li>
+            <li><a href="#"></a>Link</li>
+            <li><a href="#"></a>Link</li>
+          </ul>
+        </div>
+
+        <div class="menu">
+          <h4>Titolo</h4>
+          <ul>
+            <li><a href="#"></a>Link</li>
+            <li><a href="#"></a>Link</li>
+            <li><a href="#"></a>Link</li>
+            <li><a href="#"></a>Link</li>
+            <li><a href="#"></a>Link</li>
+          </ul>
+        </div>
       </div>
     </div>
 
