fix style sections

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
   <footer>
     <H1>FOOTER</H1>
     <div class="top">
-      <div>Colonna
+      <div>SEZIONE TOP
         <div class="contacts">
           <h3>Titolo</h3>
           <div>Logo</div>
@@ -122,7 +122,17 @@
           </ul>
         </div>
 
-     
+        <div class="menu">
+          <h4>Titolo</h4>
+          <ul>
+            <li><a href="#"></a>Link</li>
+            <li><a href="#"></a>Link</li>
+            <li><a href="#"></a>Link</li>
+            <li><a href="#"></a>Link</li>
+            <li><a href="#"></a>Link</li>
+          </ul>
+        </div>
+
         <div class="menu">
           <h4>Titolo</h4>
           <ul>
@@ -157,9 +167,10 @@
       </div>
     </div>
 
-    <div class="bottom"></div>
-      <div>Logo</div>
+    <div class="bottom">
+      <div>SEZIONE BOTTOM: Logo</div>
       <button>Registrati</button>
+    </div>
   </footer>
   
 </body>
